# codebase-cowalk

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
monitors/: monitors.json
skills/export-codewalk/: SKILL.md
skills/view-codewalk/: SKILL.md
skills/walk-codebase/: SKILL.md
src/codebase_cowalk/: __init__.py  __main__.py  chunker.py  events.py  export.py  http_server.py  paths.py  renderer.py  server.py  session.py  store.py  tail.py
src/codebase_cowalk/static/: app.css  app.js
src/codebase_cowalk/templates/: index.html
